fixed height in request form on mobile

--- a/src/Reviews.css
+++ b/src/Reviews.css
@@ -145,6 +145,7 @@
 .request-form input {
     background: transparent;
     padding-left: 40px;
+    height: 30px;
     color: #7a7f8a;
     font-size: 15px;
     border: 0;
